--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
               <i class=""></i>
             </button>
             <code>
-              <span>select</span> skill_name,skill_percentage <span>from</span> `skills` <span>order by</span>
-              skill_percentage <span>desc</span>
+              <span>select</span> skill_name,skill_rating <span>from</span> `skills` <span>order by</span>
+              skill_rating <span>desc</span>
             </code>
           </div>
         </div>
@@ -113,50 +113,66 @@
           <section class="app-languages md-container">
             <div>
               <h4>HTML5</h4>
-              <div class="relative progress-container">
-                <progress value="70" max="100"></progress>
+              <div class="stars">
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
               </div>
             </div>
             <div>
               <h4>CSS3</h4>
-              <div class="relative progress-container">
-                <progress value="60" max="100"></progress>
+              <div class="stars">
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
               </div>
             </div>
             <div>
               <h4>JAVASCRIPT</h4>
-              <div class="relative progress-container">
-                <progress value="70" max="100"></progress>
+              <div class="stars">
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
               </div>
             </div>
             <div>
               <h4>PHP</h4>
-              <div class="relative progress-container">
-                <progress value="73" max="100"></progress>
+              <div class="stars">
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
               </div>
             </div>
             <div>
               <h4>MYSQL</h4>
-              <div class="relative progress-container">
-                <progress value="40" max="100"></progress>
+              <div class="stars">
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
               </div>
             </div>
             <div>
               <h4>LARAVEL</h4>
-              <div class="relative progress-container">
-                <progress value="60" max="100"></progress>
+              <div class="stars">
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
               </div>
             </div>
             <div>
               <h4>VUE JS</h4>
-              <div class="relative progress-container">
-                <progress value="71" max="100"></progress>
+              <div class="stars">
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
               </div>
             </div>
             <div>
               <h4>TAILWIND CSS</h4>
-              <div class="relative progress-container">
-                <progress value="88" max="100"></progress>
+              <div class="stars">
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
+                <i class="fa fa-star fa-2x"></i>
               </div>
             </div>
           </section>
@@ -268,6 +284,10 @@
           <i class="fa fa-times"></i>
       </button>
     </div>
+  </div>
+  <div id="notice">
+    <p>This website still in <strong>Dev</strong> mode</p>
+    <button>Got it!</button>
   </div>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
   <script src="js/app.js"></script>
